2014-09-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* nl_NL.po: Updated Dutch translation.  Thanks Heimen Stoffels!
	* tumblr/entry.py (AddedTumblrHtmlMarkup): Added removing
	  redundant HTML tags.
	* twittytwister/twitter.py: Added support for Twisted 14.0.0.

2014-08-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme  Barrientos!

2014-08-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.1 release.

2014-08-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* facebook/entry.py (FacebookEntry): Fixed Facebook photo URLs.

2014-08-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po, ca.po: Updated translation. Thanks Adolfo Jayme  Barrientos!
	* plugins/facebook/: Added checking for Facebook account
	  expiration.

2014-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* pl_PL.po: Updated Polish translation.  Thanks hakunamatata!

2014-01-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/output.py (TwitterFeedOutput._on_connect): Fixed an
	  error callback.

2014-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks alexnmoya!

2014-01-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py (UpdateWindow.__init__): Fixed an enchant spell
	  cheker dictionary problem.

2013-11-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fr_FR.po, pl_PL.po: Updated translation.

2013-10-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.1 release.

2013-10-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed replying from notifications
	* profile.py (ProfilePane): Fixed URLs on profile.

2013-10-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed icons on notifications under Gnome 3.8.

2013-10-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* pl_PL.po: Added new Polish translation.  Thanks hakunamatata!
